Added new router upload-files, added ck-editor to sub category and made it editable, create order added delivery charges, create request whatsapp enabled, Whatsapp campaign created for: refund-initiated and KYC, replace click twice fixed,

--- a/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.html
+++ b/src/app/components/products/digital/digital-sub-category/digital-sub-category.component.html
@@ -186,6 +186,10 @@
             <label for="editSubCatMetaDescription" class="mb-1">Meta description :</label>
             <input class="form-control" [(ngModel)]="editSubCatMetaDescription" id="editSubCatMetaDescription" type="text">
         </div>
+        <div class="form-group">
+            <label for="editSubCatSeoContent" class="mb-1">Seo content</label>
+            <ck-editor [(ngModel)]="editSubCatSeoContent" id="editSubCatSeoContent" language="en" [fullPage]="false"></ck-editor>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-primary"  (click)="updateCategory()">Save</button>
