--- a/src/app/components/sales/create-renewal-order/create-renewal-order.component.html
+++ b/src/app/components/sales/create-renewal-order/create-renewal-order.component.html
@@ -146,7 +146,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
-                                        <a class="renew-status">Asset #: {{p.data.asset_id}}</a>
+                                        <a class="renew-status">Product #: {{p.data.prod_id}}</a>
                                     </div>
                                     <!-- <div class="col-6 text-right">
                                         <a class="renew-status">Rent: ₹{{((p.data.renewal_price-0)+(p.data.damage_protection-0))}}</a>
