Reviews editable done, replacement completely fixed, kyc partially submitted updated to admin.

--- a/src/app/components/sales/create-renewal-order/create-renewal-order.component.html
+++ b/src/app/components/sales/create-renewal-order/create-renewal-order.component.html
@@ -102,8 +102,8 @@
                         <th scope="col">End date</th>
                         <th scope="col">Due date</th>
                         <th scope="col">Status</th>
-                        <th scope="col">Rent</th>
-                        <th scope="col">Change renewal price</th>
+                        <th scope="col">Future Rent</th>
+                        <th scope="col">Current renewal price</th>
                     </tr>
                 </thead>
                 <tbody>
