--- a/src/app/components/users/create-edit-kyc/create-edit-kyc.component.html
+++ b/src/app/components/users/create-edit-kyc/create-edit-kyc.component.html
@@ -11,7 +11,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row" *ngIf="kycStatus?.kyc_status=='eKYC submitted' && !updateForm">
+                        <div class="row" *ngIf="(kycStatus?.kyc_status=='eKYC submitted' || kycStatus.kyc_status=='eKYC partially submitted') && !updateForm">
                             <div class="col-md-1"></div>
                             <div class="col-md-10 delivery-sec shadow p-3 m-0">
                                 <div class="row kyc-card">
@@ -23,7 +23,7 @@
                                     <div class="col-md-3"></div>
                                     <div class="col-md-3 warning-text">  
                                         <i class="fa fa-check-circle" aria-hidden="true"></i>
-                                        <h2>eKYC Submitted</h2>                   
+                                        <h2>{{kycStatus.kyc_status}}</h2>                   
                                     </div>
                                     <div class="col-md-2"></div>
                                     <div class="col-md-8 text-left">                        
